fix: text alignment in expertise section and the hidden heading.

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -63,6 +63,7 @@ hr {
     background-color: #EDC9D2;
 }
 
+
 /*-------------------------------------------------------------------  section home */
 .home-section {
     height: auto;
@@ -75,11 +76,27 @@ hr {
     float: left;
 }
 
+/* creates the level of zoom for hero image */
+@keyframes welcome-zoom {
+    from {
+        transform: scale(1);
+    }
+
+    to {
+        transform: scale(1.1);
+    }
+}
+
 #welcome {
     display: flex;
     align-items: center;
     justify-content: center;
     float: right;
+
+    /* animates zoom effect on loading page */
+    animation-name: welcome-zoom;
+    animation-duration: 5s;
+    animation-fill-mode: forwards;
 }
 
 #welcome p {
@@ -93,7 +110,7 @@ hr {
 
 .one-third-width-column {
     width: 33.33%;
-    /* width: 20%; */
+
 }
 
 .two-thirds-width-column {
@@ -108,10 +125,12 @@ hr {
 
 /*-------------------------------------------------------------------  section experience */
 .experience-section {
-    padding: 1rem;
+    padding: 5rem;
     margin-bottom: 40px;
     background: url('../images/bokeh-2072271_1920.jpg') center center / cover no-repeat fixed;
     margin-top: 60px;
+
+    margin-bottom: 80px;
 }
 
 .experience-section h1,
@@ -170,7 +189,7 @@ section {
 
 /*-------------------------------------------------------------------  education section */
 .education-section {
-    padding: 1rem;
+    padding: 5rem;
     margin-bottom: 40px;
     display: grid;
     place-items: center;
@@ -216,7 +235,7 @@ ul strong {
 
 /*-------------------------------------------------------------------  skills section */
 .skills-section {
-    padding: 1rem;
+    padding: 5rem;
     margin-bottom: 40px;
     background: url('../images/bokeh-2072271_1920.jpg') center center / cover no-repeat fixed;
 }
@@ -251,16 +270,23 @@ h3 {
     text-align: center;
 }
 
+div .skill-box {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding: 5px 0;
+    display: inline-flex;
+}
+
 .skill-box {
     border-radius: 25px;
     background: #9A6C81;
-    padding: 5px;
     width: 210px;
     height: 65px;
     text-align: center;
-    display: inline-block;
     box-sizing: border-box;
     vertical-align: middle;
+
 }
 
 #language ul {
